--- a/client/src/pages/Contracts.css
+++ b/client/src/pages/Contracts.css
@@ -15,7 +15,7 @@
   
   /* Header styles */
   .contract-table th {
-    background-color: #f97316;
+    background-color: #FD5B32;
     color: #333;
     font-weight: bold;
   }
